--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -2,22 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context=".Login.LoginActivity"
-    android:id="@+id/activity_login">
+    tools:context=".Login.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="110dp"
-        android:background="@drawable/editstyle"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp">
+        android:layout_marginTop="110dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/editstyle"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <EditText
             android:id="@+id/edtUsername"
@@ -26,11 +28,11 @@
             android:background="@null"
             android:cursorVisible="true"
             android:hint="请输入账号"
-            android:textColorHint="@color/editTextCorlor"
-            android:textAlignment="center"
-            android:textSize="20dp"
             android:inputType="textEmailAddress"
-            android:textCursorDrawable="@color/cursorCorlor"/>
+            android:textAlignment="center"
+            android:textColorHint="@color/editTextCorlor"
+            android:textCursorDrawable="@color/cursorCorlor"
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -82,16 +84,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="1"
         android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
             android:layout_gravity="center"
+            android:background="@color/colorPrimary"
             android:text="注册账号" />
 
         <LinearLayout
@@ -111,8 +113,8 @@
             android:id="@+id/btnForgetPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@color/colorPrimary"
-            android:text="忘记密码"
-            android:layout_gravity="center"/>
+            android:text="忘记密码" />
     </LinearLayout>
 </LinearLayout>
