--- a/Traveldiary/app/src/main/res/layout/activity_register.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_register.xml
@@ -56,24 +56,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/editstyle"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp">
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/editstyle">
 
         <EditText
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
+            android:baselineAligned="false"
             android:cursorVisible="true"
-            android:textAlignment="center"
             android:hint="请输入密码"
             android:inputType="textPassword"
+            android:textAlignment="center"
             android:textColorHint="@color/editTextCorlor"
             android:textCursorDrawable="@color/cursorCorlor"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:maxLength="16" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/passwordLength"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            android:layout_gravity="center"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -81,7 +97,7 @@
         android:layout_height="50dp"
         android:background="@drawable/editstyle"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp">
 
@@ -101,10 +117,23 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/noSame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FF0000"
+        android:layout_gravity="center"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:orientation="horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/editstyle">
