--- a/Traveldiary/app/src/main/res/layout/activity_reset_pass.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_reset_pass.xml
@@ -43,7 +43,7 @@
                 android:background="@null"
                 android:cursorVisible="true"
                 android:hint="请输入新密码"
-                android:inputType="textEmailAddress"
+                android:inputType="textPassword"
                 android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
@@ -53,10 +53,24 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/passwordLength"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/editstyle">
 
@@ -73,7 +87,7 @@
                 android:background="@null"
                 android:cursorVisible="true"
                 android:hint="请确认新密码"
-                android:inputType="textEmailAddress"
+                android:inputType="textPassword"
                 android:textAlignment="center"
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
@@ -82,11 +96,25 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/noSame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF0000"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="5"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="25dp">
 
         <Button
             android:id="@+id/btnNext"
