--- a/Traveldiary/app/src/main/res/layout/activity_add_message.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_add_message.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -25,12 +24,11 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="40dp"
             android:layout_marginRight="50dp"
-            android:background="@drawable/editstyle">
+            android:background="@drawable/morelineeditstyle">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -55,8 +53,7 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="6"
+            android:layout_height="400dp"
             android:background="@drawable/morelineeditstyle"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
