--- a/Traveldiary/app/src/main/res/layout/myself_layout.xml
+++ b/Traveldiary/app/src/main/res/layout/myself_layout.xml
@@ -19,26 +19,16 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:src="@drawable/huanxiong" />
-        <LinearLayout
-            android:layout_marginLeft="20dp"
-            android:layout_gravity="center_vertical"
+        <TextView
+            android:layout_marginLeft="50dp"
+            android:id="@+id/nickname"
+            android:gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="孤独的小完能"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:fontFamily="serif-monospace"/>
-            <TextView
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="您已累计获赞：123"
-                android:textSize="20dp"/>
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:text="孤独的小完能"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:fontFamily="serif-monospace"/>
     </LinearLayout>
 
     <!--蓝色横线-->
