--- a/Traveldiary/app/src/main/res/layout/myself_layout.xml
+++ b/Traveldiary/app/src/main/res/layout/myself_layout.xml
@@ -10,12 +10,18 @@
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_marginRight="40dp"
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:background="#0000FF"/>
         <LinearLayout
+            android:layout_weight="2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_marginRight="40dp"
+                android:layout_width="15dp"
+                android:layout_height="match_parent"
+                android:background="#0000FF"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_weight="4"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -25,11 +31,10 @@
                 android:src="@drawable/huanxiong" />
             <TextView
                 android:layout_marginLeft="50dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="35dp"
                 android:id="@+id/nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="孤独的小完能"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:fontFamily="serif-monospace"/>
