--- a/Traveldiary/app/src/main/res/layout/activity_add_message.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_add_message.xml
@@ -53,7 +53,7 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/morelineeditstyle"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
@@ -69,7 +69,7 @@
                 android:gravity="top"
                 android:hint="请输入内容"
                 android:inputType="textMultiLine"
-                android:minLines="10"
+                android:minLines="8"
                 android:maxLines="15"
                 android:scrollbars="vertical"
                 android:background="@null">
