--- a/Traveldiary/app/src/main/res/layout/myself_layout.xml
+++ b/Traveldiary/app/src/main/res/layout/myself_layout.xml
@@ -26,8 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:id="@+id/avatar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:src="@drawable/huanxiong" />
             <TextView
                 android:layout_marginLeft="50dp"
@@ -47,39 +48,61 @@
         android:layout_height="1dp"
         android:background="#0000FF"/>
 
-
-    <!--留言树-->
     <Button
         android:id="@+id/treebtn"
-        android:background="@drawable/treebtn"
+        android:background="@drawable/historybtn"
+        android:drawableLeft="@mipmap/leavemessage"
         android:layout_width="350dp"
         android:layout_height="80dp"
-        android:text="留言历史"
+        android:text="          留言历史"
+        android:paddingLeft="60dp"
+        android:gravity="center_vertical"
         android:textSize="25dp" />
-    <Button
-        android:id="@+id/notibtn"
-        android:background="@drawable/treebtn"
-        android:layout_marginTop="20dp"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:text="通知"
-        android:textSize="20dp" />
-    <Button
-        android:id="@+id/favobtn"
-        android:background="@drawable/treebtn"
-        android:layout_marginTop="5dp"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:text="我的收藏"
-        android:textSize="20dp" />
-    <Button
-        android:id="@+id/quesbtn"
-        android:background="@drawable/treebtn"
-        android:layout_marginTop="5dp"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:text="问题与反馈"
-        android:textSize="20dp" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/notibtn"
+            android:background="@drawable/iamgebtn"
+            android:drawableTop="@mipmap/notification"
+            android:scaleType="center"
+            android:paddingTop="10dp"
+            android:src="@mipmap/feedback"
+            android:layout_marginTop="20dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:textSize="12dp"
+            android:text="通知"
+            android:textStyle="bold"/>
+        <Button
+            android:id="@+id/favobtn"
+            android:background="@drawable/iamgebtn"
+            android:drawableTop="@mipmap/favorite"
+            android:scaleType="center"
+            android:paddingTop="10dp"
+            android:src="@mipmap/feedback"
+            android:layout_marginTop="20dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:textSize="12dp"
+            android:text="收藏"
+            android:textStyle="bold"/>
+        <Button
+            android:id="@+id/quesbtn"
+            android:background="@drawable/iamgebtn"
+            android:drawableTop="@mipmap/feedback"
+            android:scaleType="center"
+            android:paddingTop="10dp"
+            android:src="@mipmap/feedback"
+            android:layout_marginTop="20dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:textSize="12dp"
+            android:text="问题反馈"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
 
     <LinearLayout
         android:gravity="bottom"
