--- a/Traveldiary/app/src/main/res/layout/tree_item.xml
+++ b/Traveldiary/app/src/main/res/layout/tree_item.xml
@@ -1,104 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-    <LinearLayout
-        android:id="@+id/message_layout"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/messagestyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/message_title"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="3dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="20dp" />
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="1dp"
-            android:background="#DCDCDC"
-            android:layout_gravity="center_horizontal"/>
-        <TextView
-            android:id="@+id/message"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="18dp" />
-        <TextView
-            android:layout_width="350dp"
-            android:layout_height="1dp"
-            android:background="#DCDCDC"
-            android:layout_gravity="center_horizontal"/>
-        <LinearLayout
-            android:gravity="center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="6dp"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@mipmap/locate"/>
-            <TextView
-                android:id="@+id/location"
-                android:layout_marginTop="3dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="120dp"
+    android:padding="10dp"
+    android:layout_height="match_parent">
+    <LinearLayout android:layout_width="match_parent"
+        android:background="@drawable/card_style"
+        android:layout_height="wrap_content">
+        <LinearLayout android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:layout_height="match_parent">
+            <TextView android:layout_width="match_parent"
+                android:text="这是标题"
                 android:textColor="#000000"
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/leavedate"
-                android:layout_marginRight="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:gravity="center"
+                android:id="@+id/message_title"
+                android:textSize="26sp"
+                android:layout_height="wrap_content"/>
+            <View android:layout_width="match_parent" android:background="#000" android:layout_height="1dp"/>
+            <TextView android:layout_width="match_parent"
+                android:id="@+id/message"
+                android:padding="10dp"
+                android:textSize="22sp"
+                android:text="这是内容"
                 android:textColor="#000000"
-                android:textSize="18dp" />
-        </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#C0C0C0"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="5dp"
-                android:src="@mipmap/prf"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-            <TextView
-                android:id="@+id/finger"
-                android:textColor="#000"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_width="200dp"
+                android:layout_height="wrap_content"/>
+            <LinearLayout android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView android:layout_width="16dp"
+                    android:layout_weight="1"
+                    android:src="@mipmap/locate"
+                    android:layout_height="16dp"/>
+                <TextView android:layout_width="wrap_content"
+                    android:text="这是地址"
+                    android:textColor="#000000"
+                    android:layout_weight="20"
+                    android:id="@+id/location"
+                    android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content"
+                    android:text="xxxx-xx-xx"
+                    android:textColor="#000000"
+                    android:id="@+id/leavedate"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18dp"/>
-            <ImageView
-                android:id="@+id/rewrite"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="5dp"
-                android:src="@mipmap/rewrite"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-            <ImageView
-                android:id="@+id/trash"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="5dp"
-                android:src="@mipmap/trash"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
+                android:padding="10dp">
+                <ImageView
+                    android:src="@mipmap/prf"
+                    android:id="@+id/like"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+                <TextView
+                    android:id="@+id/finger"
+                    android:textColor="#000"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="10"
+                    android:text="230"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18dp"/>
+                <ImageView
+                    android:id="@+id/rewrite"
+                    android:src="@mipmap/rewrite"
+                    android:layout_weight="1"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+                <ImageView
+                    android:id="@+id/trash"
+                    android:src="@mipmap/trash"
+                    android:layout_weight="1"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
