--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,22 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp">
+        <CheckBox
+            android:id="@+id/ifRemember"
+            android:layout_marginLeft="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="记住密码"
+            android:fontFamily=""
+            android:textSize="18dp"
+            android:textColor="#ffffff"
+            android:buttonTint="#ffffff"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
