--- a/Traveldiary/app/src/main/res/layout/activity_forget_pass.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_forget_pass.xml
@@ -24,18 +24,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/editstyle">
+        android:background="@drawable/editstyle"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/edtEmailaddress"
@@ -49,7 +46,6 @@
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
                 android:textSize="18dp" />
-        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -72,6 +68,7 @@
                 android:id="@+id/edtVerifyCode"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingLeft="20dp"
                 android:background="@null"
                 android:cursorVisible="true"
                 android:hint="请输入验证码"
