--- a/Traveldiary/app/src/main/res/layout/activity_register.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_register.xml
@@ -24,18 +24,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/editstyle">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+        android:background="@drawable/editstyle"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
             <EditText
                 android:id="@+id/edtEmailaddress"
@@ -49,7 +45,6 @@
                 android:textColorHint="@color/editTextCorlor"
                 android:textCursorDrawable="@color/cursorCorlor"
                 android:textSize="18dp" />
-        </LinearLayout>
 
     </LinearLayout>
 
