--- a/Traveldiary/app/src/main/res/layout/activity_setting.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_setting.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="#ffffff"
+            android:background="#66C0C0C0"
             android:orientation="horizontal">
 
             <TextView
@@ -49,7 +49,6 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
             android:background="#bcbcbc">
 
         </LinearLayout>
@@ -58,7 +57,7 @@
             android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#ffffff"></ListView>
+            android:background="#66C0C0C0"></ListView>
 
     </LinearLayout>
 </LinearLayout>
