--- a/Traveldiary/app/src/main/res/values/settings.xml
+++ b/Traveldiary/app/src/main/res/values/settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--Base.Theme.AppCompat.Light.DarkActionBar-->
 <resources>
-    <style name="settings" parent="Theme.AppCompat">
+    <style name="settings" parent="Base.Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/settingCorlor</item>
         <item name="colorPrimaryDark">@color/settingCorlor</item>
