--- a/Traveldiary/app/src/main/res/layout/activity_setting.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_setting.xml
@@ -48,9 +48,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginLeft="10dp"
-            android:background="#bcbcbc">
+            android:layout_height="1dp"
+            android:background="#cacaca">
 
         </LinearLayout>
 
